{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 562,
  "lineage": "627ce41a-fc33-9b70-7003-de85af9cb82f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demoinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb7ffc4a6f7ad467",
            "arn": "arn:aws:ec2:us-east-2:741705528246:instance/i-0692d9b02ebce57be",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0692d9b02ebce57be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tests",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05e005874f546f09a",
            "private_dns": "ip-10-0-1-115.us-east-2.compute.internal",
            "private_ip": "10.0.1.115",
            "public_ip": "3.144.232.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b0648e125c8f4f8e",
                "volume_size": 18,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015e70a9e5a89589c",
            "tags": {
              "Name": "My Public Instance"
            },
            "tags_all": {
              "Name": "My Public Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04cc3d47dfd34a843"
            ]
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demoinstance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb7ffc4a6f7ad467",
            "arn": "arn:aws:ec2:us-east-2:741705528246:instance/i-0ba2015752963b05d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba2015752963b05d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tests",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01dda2beb72c628bc",
            "private_dns": "ip-10-0-2-15.us-east-2.compute.internal",
            "private_ip": "10.0.2.15",
            "public_ip": "18.188.248.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04864ac71853ee894",
                "volume_size": 18,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5461a5559e9d5e1",
            "tags": {
              "Name": "My Public Instance 2"
            },
            "tags_all": {
              "Name": "My Public Instance 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04cc3d47dfd34a843"
            ]
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demogateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741705528246:internet-gateway/igw-0428dae2778f9aabf",
            "id": "igw-0428dae2778f9aabf",
            "owner_id": "741705528246",
            "vpc_id": "vpc-0aebeeac27e73373f"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:741705528246:loadbalancer/app/External-LB/5f579c9e322b555d",
            "arn_suffix": "app/External-LB/5f579c9e322b555d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "External-LB-1866531984.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:741705528246:loadbalancer/app/External-LB/5f579c9e322b555d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "External-LB",
            "security_groups": [
              "sg-04cc3d47dfd34a843"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015e70a9e5a89589c"
              },
              {
                "subnet_id": "subnet-0e5461a5559e9d5e1"
              }
            ],
            "subnets": [
              "subnet-015e70a9e5a89589c",
              "subnet-0e5461a5559e9d5e1"
            ],
            "vpc_id": "vpc-0aebeeac27e73373f",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:741705528246:listener/app/External-LB/5f579c9e322b555d/1e8f4708557f710b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:741705528246:targetgroup/ALB-TG/56734c17cc12494d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:741705528246:listener/app/External-LB/5f579c9e322b555d/1e8f4708557f710b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:741705528246:loadbalancer/app/External-LB/5f579c9e322b555d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external-alb",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:741705528246:targetgroup/ALB-TG/56734c17cc12494d",
            "arn_suffix": "targetgroup/ALB-TG/56734c17cc12494d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:741705528246:targetgroup/ALB-TG/56734c17cc12494d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0aebeeac27e73373f"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:741705528246:targetgroup/ALB-TG/56734c17cc12494d-20220505095114880800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:741705528246:targetgroup/ALB-TG/56734c17cc12494d",
            "target_id": "i-0692d9b02ebce57be"
          },
          "dependencies": [
            "aws_instance.demoinstance",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:741705528246:targetgroup/ALB-TG/56734c17cc12494d-20220505095125480700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:741705528246:targetgroup/ALB-TG/56734c17cc12494d",
            "target_id": "i-0ba2015752963b05d"
          },
          "dependencies": [
            "aws_instance.demoinstance1",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741705528246:route-table/rtb-0c0d7f0e59f534a24",
            "id": "rtb-0c0d7f0e59f534a24",
            "owner_id": "741705528246",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0428dae2778f9aabf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route to internet"
            },
            "tags_all": {
              "Name": "Route to internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aebeeac27e73373f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009281bc5617da437",
            "route_table_id": "rtb-0c0d7f0e59f534a24",
            "subnet_id": "subnet-015e70a9e5a89589c"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.route",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b8cc8edc48254c9",
            "route_table_id": "rtb-0c0d7f0e59f534a24",
            "subnet_id": "subnet-0e5461a5559e9d5e1"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.route",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741705528246:security-group/sg-0ed34a0c710d76800",
            "description": "Allow inbound traffic from application layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0ed34a0c710d76800",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from application layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04cc3d47dfd34a843"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database SG",
            "name_prefix": "",
            "owner_id": "741705528246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database SG"
            },
            "tags_all": {
              "Name": "Database SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aebeeac27e73373f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demosg",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demosg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741705528246:security-group/sg-04cc3d47dfd34a843",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cc3d47dfd34a843",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220505095005940100000001",
            "name_prefix": "terraform-",
            "owner_id": "741705528246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web SG"
            },
            "tags_all": {
              "Name": "Web SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aebeeac27e73373f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741705528246:subnet/subnet-0afffa00531b114e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afffa00531b114e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741705528246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application Subnet 1"
            },
            "tags_all": {
              "Name": "Application Subnet 1"
            },
            "vpc_id": "vpc-0aebeeac27e73373f"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741705528246:subnet/subnet-01dc3b8b7d15e6686",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dc3b8b7d15e6686",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741705528246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application Subnet 2"
            },
            "tags_all": {
              "Name": "Application Subnet 2"
            },
            "vpc_id": "vpc-0aebeeac27e73373f"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741705528246:subnet/subnet-0c1908f7e877336c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1908f7e877336c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741705528246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database Subnet 1"
            },
            "tags_all": {
              "Name": "Database Subnet 1"
            },
            "vpc_id": "vpc-0aebeeac27e73373f"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741705528246:subnet/subnet-032f7786d53c5f8a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032f7786d53c5f8a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741705528246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database Subnet 2 "
            },
            "tags_all": {
              "Name": "Database Subnet 2 "
            },
            "vpc_id": "vpc-0aebeeac27e73373f"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741705528246:subnet/subnet-015e70a9e5a89589c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015e70a9e5a89589c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741705528246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web Subnet 1"
            },
            "tags_all": {
              "Name": "Web Subnet 1"
            },
            "vpc_id": "vpc-0aebeeac27e73373f"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741705528246:subnet/subnet-0e5461a5559e9d5e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5461a5559e9d5e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741705528246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web Subnet 2"
            },
            "tags_all": {
              "Name": "Web Subnet 2"
            },
            "vpc_id": "vpc-0aebeeac27e73373f"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demovpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:741705528246:vpc/vpc-0aebeeac27e73373f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0371462227224d5ea",
            "default_route_table_id": "rtb-002ea727e337bf2b0",
            "default_security_group_id": "sg-0abb7f044218ee048",
            "dhcp_options_id": "dopt-058affe94eab366fb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0aebeeac27e73373f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002ea727e337bf2b0",
            "owner_id": "741705528246",
            "tags": {
              "Name": "Demo VPC"
            },
            "tags_all": {
              "Name": "Demo VPC"
            }
          }
        }
      ]
    }
  ]
}